tests/ui/anyarray.stderr
error: custom attribute panicked
 --> tests/ui/anyarray.rs:3:1
  |
3 | #[anyinput]
  | ^^^^^^^^^^^
  |
  = help: message: AnyArray expects a generic parameter, for example, AnyArray<usize> or AnyArray<AnyString>.
